# insurance_qa

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  package-lock.json  package.json  pyproject.toml
benchmarks/M0/: config.yaml  cost_log.json  eval_results.json  trace.json
benchmarks/M1/: config.yaml  cost_log.json  eval_results.json  trace.json
benchmarks/M2a/: cost_log.json  eval_results.json  trace.json
benchmarks/M2b/: cost_log.json  eval_results.json  trace.json
benchmarks/M2c/: cost_log.json  eval_results.json  trace.json
benchmarks/M2d/: cost_log.json  eval_results.json  trace.json
benchmarks/M2e/: cost_log.json  eval_results.json  trace.json
benchmarks/M3a/: cost_log.json  eval_results.json  trace.json
benchmarks/M3b/: cost_log.json  eval_results.json  trace.json
benchmarks/M3c/: cost_log.json  eval_results.json  trace.json
benchmarks/M3d/: cost_log.json  eval_results.json  trace.json
benchmarks/M4a/: cost_log.json  eval_results.json  trace.json
benchmarks/M4b/: cost_log.json  eval_results.json  trace.json
benchmarks/M4d/: cost_log.json  (+2 more)
docs/: ARCHITECTURE.md  CONTEXT.md  ISSUES.md  PRD.md  README.md  infra.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
prompts/: system_prompt.yaml
src/: __init__.py  chroma_inspect.py  config.py  eval.py  main.py  observability.py  run.py
tests/: conftest.py  test_chat.py  test_chroma_inspect.py  test_config.py  test_eval.py  test_generator.py  test_ingestion.py  test_observability.py  test_reranker.py  test_retriever.py  test_rewriter.py  test_run.py
(+64 files in other folders)
