[build-system]
requires = ["setuptools>=75", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "insurance-qa"
version = "0.1.0"
description = "Insurance policy QnA bot — retrieval strategy benchmark"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "llama-index>=0.12",
    "llama-index-embeddings-huggingface>=0.4",
    "llama-index-llms-openai>=0.3",
    "llama-index-vector-stores-chroma>=0.3",
    "llama-index-readers-file>=0.2",
    "llama-index-postprocessor-cohere-rerank>=0.2",
    "chromadb>=0.5",
    "pydantic>=2",
    "pydantic-settings>=2",
    "pyyaml>=6",
    "langfuse>=2",
    "ragas>=0.2",
    "sentence-transformers<5",
    "numpy<2",
    "torch>=2.2,<2.3",
    "pymupdf>=1.25",
    "cohere>=5",
    "sse-starlette>=2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8",
    "mypy>=1.14",
    "pre-commit>=4",
    "pytest>=8",
    "pytest-asyncio>=0.25",
    "httpx>=0.28",
    "types-pyyaml>=6",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
disallow_untyped_decorators = false
exclude = ["frontend", "benchmarks", "data"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
